# Proyecto-final---epic-1

./: CMakeLists.txt  README.md  main.cpp  run.sh
autograder/: CMakeLists.txt  config.yml
autograder/tests/asan_leaksan/: run_test  test.yml
autograder/tests/clang_tidy/: clang_tidy.cpp  run_test  test.yml
autograder/tests/cppcheck/: cppcheck.cpp  run_test  test.yml
autograder/tests/question_1/test_1/: question_1_test_1.in  run_test  test.yml  test_1.cpp
autograder/tests/question_1/test_2/: question_1_test_2.in  test.yml  test_2.cpp
autograder/tests/question_2/test_1/: question_2_test_1.in  test.yml  test_1.cpp
autograder/tests/question_2/test_2/: question_2_test_2.in  test.yml  test_2.cpp
autograder/tests/question_3/test_1/: question_3_test_1.in  test.yml  test_1.cpp
autograder/tests/question_3/test_2/: question_3_test_2.in  test.yml  test_2.cpp
autograder/tests/question_4/test_1/: question_4_test_1.in  test.yml  test_1.cpp
autograder/tests/question_4/test_2/: question_4_test_2.in  test.yml  test_2.cpp
autograder/tests/question_5/test_1/: question_5_test_1.in  test.yml  test_1.cpp
autograder/tests/question_5/test_2/: question_5_test_2.in  test.yml  test_2.cpp
autograder/tests/question_6/test_1/: question_6_test_1.in  test.yml  test_1.cpp
autograder/tests/question_6/test_2/: test.yml  test_2.cpp
autograder/tests/question_7/test_1/: question_7_test_1.in  test.yml  test_1.cpp
include/utec/algebra/: shape.h  tensor_backend.h
scripts/: generate_zip.bat  generate_zip.ps1  generate_zip.sh
src/: shape.cpp  tensor.cpp
(+2 files in other folders)
